table overflow fix

--- a/public/themes/light/app.css
+++ b/public/themes/light/app.css
@@ -23240,7 +23240,7 @@ a.icon-btn {
 .table-container {
   width: 100%;
   height: 100%;
-  overflow-x: auto;
+  overflow-x: clip;
   overflow-y: hidden;
   margin: 0.5rem 0;
 }
