--- a/resources/themes/light/components/sass/_tables.scss
+++ b/resources/themes/light/components/sass/_tables.scss
@@ -1,7 +1,7 @@
 .table-container {
     width: 100%;
     height: 100%;
-    overflow-x: auto;
+    overflow-x: clip;
     overflow-y: hidden;
     margin: .5rem 0;
 }
